cmake_minimum_required(VERSION 3.15)
project(C_prime_plus C)

set(CMAKE_C_STANDARD 99)

add_executable(C_prime_plus main.c chapter_1/test_11.c chapter_1/test_11.h chapter_7/test_directory_7.c chapter_7/test_directory_7.h chapter_2/p2-13.c chapter_2/p2-13.h chapter_5/add_plus.h chapter_5/divide.h chapter_5/chapter5_practice.c chapter_5/chapter5_practice.h chapter_5/chapter5.h chapter_6/chapter6.c chapter_6/chapter6.h)